examples/test/testpolicy15097.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15097
  namespace: namespace316
spec:
  podSelector:
    matchLabels:
      key38: value46
      key13: value13
      key34: value16
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key42: value21
          key34: value9
      podSelector:
        matchLabels:
          key24: value5
